[workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
members = [
    "runner",
    "lexer"
]

## based on the recommendations found here  https://github.com/johnthagen/min-sized-rust
# These shred a third off the binary size
[profile.release]
strip = true
lto = true # LTO instructs the linker to optimize at the link stage
opt-level = "z"  # Optimize for size.

